# Lima-camera-basler

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  pom.xml
cmake/: FindPylon3.cmake  FindPylon5.cmake  FindPylon6.cmake  project-config.cmake.in
conda/camera/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
conda/tango/: bld.bat  build.sh  meta.yaml
doc/: index.rst  tango.rst
include/: BaslerBinCtrlObj.h  BaslerCamera.h  BaslerCompatibility.h  BaslerDetInfoCtrlObj.h  BaslerInterface.h  BaslerRoiCtrlObj.h  BaslerSyncCtrlObj.h  BaslerVideoCtrlObj.h
python/: Basler.py  __init__.py
sip/: BaslerCamera.sip  BaslerInterface.sip
src/: .gitignore  BaslerBinCtrlObj.cpp  BaslerCamera.cpp  BaslerDetInfoCtrlObj.cpp  BaslerInterface.cpp  BaslerRoiCtrlObj.cpp  BaslerSyncCtrlObj.cpp  BaslerVideoCtrlObj.cpp  Makefile
tango/: Basler.py  CMakeLists.txt
